--- a/css/bio.css
+++ b/css/bio.css
@@ -7,12 +7,24 @@
     box-sizing: border-box;
 }
 
-.petrobras {
-    float: left;
-    margin-left: 0;
+.citacao-bio:hover {
+    box-shadow: 10px 10px 9999px black;
 }
 
-.fiat {
+.citacao-bio:nth-of-type(even) {
+    float: left;
+    margin-left: 0;    
+}
+
+.citacao-bio:nth-of-type(even):hover {    
+    transform: scale(1.2) rotate(-5deg);
+}
+
+.citacao-bio:nth-of-type(odd) {
     float: right;
     margin-right: 0;
+}
+
+.citacao-bio:nth-of-type(odd):hover {
+    transform: scale(1.2) rotate(5deg);
 }
